# ai-terminal

./: .gitignore  GEMINI.md  README.md  pyproject.toml
src/ai_terminal/: context_engine.py  main.py  ollama_client.py  terminal.py
