[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_terminal"
version = "0.1.0"
description = "An intelligent terminal that bridges natural language and shell execution (Optimized for local LLMs)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "httpx",
    "ptyprocess",
    "click",
    "rich",
    "python-dotenv",
    "google-generativeai"
]

[project.scripts]
ai-terminal = "ai_terminal.main:main"
